[package]
name = "password_manager"
version = "0.1.0"
edition = "2024"

[dependencies]
aes = "0.8.4"          # dernière version stable :contentReference[oaicite:1]{index=1}
block-modes = "0.9.1"
pbkdf2 = { version = "0.12", features = ["simple"] }
sha2 = "0.10"
rand = "0.9"
aes-gcm = "0.10.3"     # ajout pour chiffrement authentifié :contentReference[oaicite:2]{index=2}
